--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
  
 	<properties>
 
+        <maven.java.source>1.8</maven.java.source>
+        <maven.java.target>1.8</maven.java.target>
+
 		<!-- SAS Opensource module versions -->
 		<expojo.core.version>3.2.1</expojo.core.version>
 		<expojo.jdo.version>3.2.1</expojo.jdo.version>
@@ -27,19 +30,19 @@
 
 
 		<!-- ORM API Versions -->
-		<jdo.api.version>3.2.0-m10</jdo.api.version>
+		<jdo.api.version>3.2.0-m12</jdo.api.version>
 
 		<!-- ORM Implementation versions -->
 
 		<!-- DataNucleus versions -->
 
-		<datanucleus.api.jdo.version>5.2.0-m3</datanucleus.api.jdo.version>
+		<datanucleus.api.jdo.version>5.2.1</datanucleus.api.jdo.version>
 		<datanucleus.cache.version>5.1.1</datanucleus.cache.version>
-		<datanucleus.core.version>5.2.0-m3</datanucleus.core.version>
+		<datanucleus.core.version>5.2.1</datanucleus.core.version>
 		<datanucleus.guava.version>5.0.1</datanucleus.guava.version>
 		<datanucleus.jdo-query.version>5.0.9</datanucleus.jdo-query.version>
 		<datanucleus.jodatime.version>5.1.0-release</datanucleus.jodatime.version>
-		<datanucleus.rdbms.version>5.2.0-m3</datanucleus.rdbms.version>
+		<datanucleus.rdbms.version>5.2.1</datanucleus.rdbms.version>
 		<datanucleus.maven.plugin.version>5.0.2</datanucleus.maven.plugin.version>
 
 		
@@ -130,8 +133,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.6.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${maven.java.source}</source>
+					<target>${maven.java.target}</target>
 				</configuration>
 			</plugin>
 
