--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,25 @@
 	
 	<url>http://www.expojo.com</url>
 
+	<!--
+		Turn off stupid jardoc errors: shinnanigans started in Java 8 
+		by some bafoon at Maven who thought he wanted to get his
+		"draconian" on and force the running of doclint for Java 8
+	-->
+	<profiles>
+		<profile>
+			<id>disable-java8-doclint</id>
+			<activation>
+				<jdk>[1.8,)</jdk>
+			</activation>
+			<properties>
+				<!-- <additionalparam>-Xdoclint:none</additionalparam> -->
+				<doclint>none</doclint>
+			</properties>
+		</profile>
+	</profiles>		
+
+
 	<build>
 		<finalName>${project.artifactId}</finalName>
 
@@ -176,7 +195,7 @@
 			</plugin>
 
 		</plugins>
-		
+
 
 		<!--
 		pluginManagement 'defines and configures' the plugins in a single place high up in the
